--- a/.gitignore
+++ b/.gitignore
@@ -101,13 +101,13 @@ myvenv/
 # mypy
 .mypy_cache/
 
-.DS_Store
-*.sqlite3
+# .DS_Store
+# *.sqlite3
 media/
 *.pyc
 *.db
 *.pid
 # django migrations 
-**/migrations/**
-!**/migrations
-!**/migrations/__init__.py
+# **/migrations/**
+# !**/migrations
+# !**/migrations/__init__.py
