--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,8 @@ media/
 !**/migrations/__init__.py
 
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
